[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.6.1"
ic-cdk-macros = "0.6.1"
candid = "0.8.4"
rand = "0.7.3"
rand_chacha = "0.2.2"
serde = "1.0.152"

[dev-dependencies]
maplit = "1.0.2"
